...
              ),
              SizedBox(
                height: 20,
              ),
              CustomAccessButton(
                key: ValueKey(ForgotPasswordKeys.savePasswordAndLoginButtonKey),
                label: "Save password and login",
                onPressed: () {
                  _submitForm(context);
                },
              ),
              SizedBox(
                height: 20,
...
